Adding JSON request and Response